--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ body {
 
    color: #333;
 
-   background-color: palegoldenrod;
+   
 
 }
 
@@ -83,5 +83,15 @@ body {
 
  display: block;
 
+ margin: 0 auto;
+
+}
+
+.container {
+  position: relative;
+  display: block;
+  width: 1080px;
+  height: 20000px;
+  margin: 0 auto;
 }
 
