--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body {
 .container {
   position: relative;
   display: block;
-  width: 1080px;
+  width: 860px;
   height: 20000px;
   margin: 0 auto;
 }
@@ -111,8 +111,8 @@ p {
 }
 
 @media screen and (max-width:728px) {
-  body {
-    font-size: 12px !important;
+  p {
+    font-size: 10px !important;
   }
   .container {
     width: 100vw;
