--- a/css/style.css
+++ b/css/style.css
@@ -1,125 +1,252 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap');
 
+        #wrap {
+            margin: 0 auto;
+            background-color: #fffcec;
+            
+        }
+        #box {
+            font-family: 'Nanum Myeongjo', serif;
+            position: relative;
+            display: block;
+            margin: 0 auto;
+            height: 100%;
+            background-color: #fffcec;
+        }
+        .header {
+            position: relative;
+            display: block;
+            background-color: #ffe86f;
+            border-bottom: 1px solid black;
+            margin: 0 auto;
+        }
+        .header-box {
+            position: relative;
+            display: block;
+            margin: 0 auto;
+            width: 1000px;
+        }
+        .txtbox {
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+            width: 1000px; 
+            height: 70px;
+            width: auto;
+            align-items: center
+        }
+        .header-box img {
+            position: relative;
+            display: block;
+            width: 100px;
+            margin-left: 100px;
+        }
+        .header-box>div {
+            font-size: 18px;
+            font-weight: 700;
+        }
 
+        .youtube {
+            position: relative;
+            display: block;
+            text-align: center;
+            margin: 0 auto;
+        }
+        .mainVideo {
+            position: relative;
+            display: block;
+            width: 800px;
+            height: 500px;
+        }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  outline-style: none;
-}
+        .youtube iframe {
+            margin: 50px 0px;
+        }
 
+        .youtube {
+            margin-top: 50px;
+        }
 
+        .youtube-box,
+        .hotissue,
+        .whaton,
+        .monthly-box,
+        .vduck {
+            position: relative;
+            display: block;
+            margin: 0 auto;
+            margin-top: 100px;
+            width: 1000px;
+        }
 
-html {
+        .whaton div,
+        .vduck div {
+            text-align: center;
+        }
 
-  font-size: 10px;
+        .whaton-box1 {
+            height: 190px;
+            overflow: hidden;
+        }
 
-}
+        .whaton-box2 a {
+            margin: 0 20px;
+        }
 
+        .whaton-txt {
+            margin-top: 60px;
+            margin-bottom: 100px;
+            font-size: 18px;
+            font-weight: 600;
+        }
 
+        .monthly {
+            width: 100%;
+            background-color: white;
+        }
 
-a {
-  color: #333333;
-  text-decoration: none;
-}
+        .vduck {
+            padding-bottom: 220px;
+            text-align: center;
+        }
 
+        .vduck .vduck-box {
+            height: 597px;
+            overflow: hidden;
+            margin-bottom: 50px;
+        }
 
+        .vduck a {
+            position: relative;
+            display: block;
+            width: 300px;
+            padding: 10px 50px;
+            font-size: 22px;
+            font-weight: 800;
+            border-radius: 25px;
+            text-align: center;
+            background-color: black;
+            color: #fff;
+            text-decoration: none;
+            margin: 0 auto;
+            margin-bottom: 30px; 
+        }
 
-img {
-  vertical-align: middle;
-  border: 0;
-}
+        .vduck a:hover {
+            background-color: #feed59;
+            color: #333;
+            transition: 0.2s;
+        }
 
+        .vduck span {
+            font-size: 18px;
+            font-weight: 700;
+            padding-top: 30px;
+            line-height: 28px;
+        }
 
+        .ft-box1 {
+            height: 100px;
+            text-align: center;
+            background-color: #feed59;
+        }
 
-ul, ol, li {
+        .ft-box2 {
+            background-color: black;
+            padding:10px 10px 10px 10px;
+        }
 
-  list-style: none;
+        @media screen and (max-width: 768px) {
+            body {
+                width: 100vw;
+                height: 100vh;
+                overflow: scroll;
+                margin: 0 auto;
+                scroll-behavior: smooth;
+            }
+            span {
+                font-size: 3.4vw !important;
+                line-height: 6vw !important;
+                width: 75%;
+            }
+            #wrap {
+                position: relative;
+                display: block;
+            }
+            #wrap>div {
+                position: relative;
+                display: block;
+            }
+            .header-box>div {
+                font-size: 1vw;
+            }
+            .youtube iframe {
+                width: 100vw;
+                height: 56vw;
+            }
+            .youtube-box span {
+                margin-left: 1px;
+            }
+            .header-box, .youtube-box, .hotissue, .whaton img, .monthly-box, .vduck {
+                position: relative;
+                display: block;
+                width: 100%;
+                height: auto;
+                margin: 0 auto;
+            }
+            .txtbox {
+                width: 90% !important;
+                margin:  0 auto;
+            }
+            .header-box>div {
+                display: block;
+                margin: 0 auto;
+            }
+            .txtboxDate,
+            .txtboxTitle {
+                display: none;
+            }
+            .txtbox div {
+                position: absolute;
+                top: 25%;
+            }
+            .vduck a {
+                width: 50vw;
+                font-size: 3.8vw;
+            }
+            .vduck-txt {
+                padding: 0 19px;
+                font-size: 3.4vw;
+                line-height: 5.8vw;
+            }
+            .whaton-box1 {
+                height: 100%;
+            }
+            .whaton-box2 {
+                display: flex;
+            }
+            .whaton-txt {
+                font-size: 1.8vw;
+                margin-top: 20px;
+            }
+            .hotissue img {
+                margin-left: -12px;
+            }
+            .youtube-box, .hotissue img, .whaton, .monthly-box img, .vduck img, .ft-box1 img {
+                width: 100%;
+            }
 
-}
-
-
-
-body {
-
-   font-family: 'Roboto', 'Noto Sans KR', sans-serif;  
-
-   font-weight: 400;    
-
-   font-size: 12px;    
-
-   line-height: 1.4;
-
-   letter-spacing: -0.64px;  
-
-   color: #333;
-
-   
-
-}
-
-
-
-.clearfix:after {
-
-  content: '';
-
-  position: relative;
-
-  display: block;
-
-  width: 100%;
-
-  clear: both;
-
-}
-
-
-
-.wrap {
-
- position: relative;
-
- display: block;
-
- margin: 0 auto;
-
-}
-
-.container {
-  position: relative;
-  display: block;
-  width: 860px;
-  height: 20000px;
-  margin: 0 auto;
-}
-
-img {
-  display: inline-block;
-}
-
-video {
-  width: 100%;
-  background-size: 110%;
-}
-
-p {
-  margin: 300px 0;
-  font-size: 32px;
-  text-align: center;
-}
-
-@media screen and (max-width:728px) {
-  p {
-    font-size: 10px !important;
-  }
-  .container {
-    width: 100vw;
-  }
-
-  img,
-  video {
-    width: 100vw;
-  }
-}
+            .monthly-box {
+                margin-bottom: 50px;
+            }
+            .vduck .vduck-box {
+                height: 100%;
+                margin-bottom: 0;
+            }
+            .ft-box1 {
+                height: 100%;
+            }
+           
+            
+        }
